Resolve Nav Semantic Issues, Fix Collapsed Nav Bug

--- a/src/scss/Nav.scss
+++ b/src/scss/Nav.scss
@@ -29,7 +29,7 @@
     height: 100%;
     font-family: "Nunito Sans", sans-serif;
     font-size: 19px;
-    font-weight: bold;
+    font-weight: 600;
     nav {
       width: 100%;
       
@@ -43,17 +43,14 @@
         left: 2vw;
         margin-bottom: 0;
 
-        .link-active {
-          & { //prevents sec. nav being different height if no page is active
-            margin-bottom: 0px;
-          }
-          border-bottom: 6px solid $openLawA11yBrown;
+        .link-active { 
+            border-bottom: 6px solid $openLawA11yBrown;
         }
-        a {
+        li {
           margin: 0 20px;
           display: inline-block;
           text-decoration: none;
-          padding: 0px 5px 15px 5px;
+          padding: 0px 0px 15px 0px;
           margin-bottom: 6px;
           
           &:hover {
@@ -61,9 +58,10 @@
             border-bottom: 6px solid $openLawA11yBrown;
           }
 
-          li {
-            color: #ffffff; 
-            
+          a {
+            padding: 0px 5px 12px 5px;
+            text-decoration: none;
+            color: #ffffff;
           }
           
         }
@@ -129,7 +127,7 @@
     width: 100%;
     font-family: "Nunito Sans", sans-serif;
     font-size: 19px;
-    font-weight: bold;
+    font-weight: 600;
     nav {
       width: 100%;
       ul {
@@ -139,11 +137,11 @@
           
           border-bottom: 6px solid $openLawA11yBrown;
         }
-        a {
+        li {
           margin: 0 20px;
           display: inline-block;
           text-decoration: none;
-          padding: 0px 5px 15px 5px;
+          padding: 0px 0px 15px 0px;
           margin-bottom: 6px;
           
           &:hover {
@@ -151,9 +149,10 @@
             border-bottom: 6px solid $openLawA11yBrown;
           }
 
-          li {
-            color: #ffffff; 
-            
+          a {
+            padding: 0px 5px 12px 5px;
+            text-decoration: none;
+            color: #ffffff;
           }
           
         }
